Enhance index.html with SEO and Open Graph tags
Added SEO and Open Graph metadata for better visibility.

--- a/index.html
+++ b/index.html
@@ -4,8 +4,30 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Gean Paulo Links</title>
-  <link rel="stylesheet" href="style.css">
+  
+  <!-- Basic SEO -->
+  <meta name="description" content="Gean Paulo's links page. Connect with me on socials, explore my work, and discover my projects.">
+  <meta name="author" content="Gean Paulo">
+  <meta name="keywords" content="Gean Paulo, web developer, designer, portfolio, links, social links, projects, web development">
+  
+  <!-- Open Graph / Facebook -->
+  <meta property="og:title" content="Gean Paulo Links">
+  <meta property="og:description" content="Gean Paulo's links page. Connect with me on socials, explore my work, and discover my projects.">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://geanpaulo.site/">
+  <meta property="og:image" content="https://geanpaulo.site/assets/images/avatar.jpg">
+  
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Gean Paulo Links">
+  <meta name="twitter:description" content="Gean Paulo's links page. Connect with me on socials, explore my work, and discover my projects.">
+  <meta name="twitter:image" content="https://geanpaulo.site/assets/images/avatar.jpg">
+  
+  <!-- Favicon -->
   <link rel="icon" href="assets/images/gp5.svg" type="image/svg+xml">
+  
+  <!-- Stylesheet -->
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <!-- Theme Toggle Button -->
@@ -13,14 +35,13 @@
 
   <!-- Main Container -->
   <div class="container">
-    
     <!-- Profile Section -->
     <div class="profile">
-  <div id="greeting" class="greeting-pill">Hello!</div>
-  <img src="assets/images/avatar.jpg" alt="Gean Paulo" class="avatar">
-  <h1>Gean Paulo</h1>
-  <p>I'm Gean Paulo, a web developer & designer crafting clean, interactive digital experiences.</p>
-</div>
+      <div id="greeting" class="greeting-pill">Hello!</div>
+      <img src="assets/images/avatar.jpg" alt="Gean Paulo" class="avatar">
+      <h1>Gean Paulo</h1>
+      <p>I'm Gean Paulo, a web developer & designer crafting clean, interactive digital experiences.</p>
+    </div>
 
     <!-- Links Section -->
     <div id="links" class="links">
