Add featured section div to index.html

--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
       <p>I'm Gean Paulo, a web developer & designer crafting clean, interactive digital experiences.</p>
     </div>
 
+    <!-- Featured Section -->
+    <div id="featured"></div>
+
     <!-- Links Section -->
     <div id="links" class="links">
       <!-- JavaScript will populate link cards here -->
