Update footer text with additional information

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
     <!-- Footer -->
     <footer>
-      <p>© 2026 Gean Paulo</p>
+      <p>© 2026 Gean Paulo &middot; Crafted with care in Manila 🇵🇭</p>
     </footer>
   </div>
 
