--- a/index.html
+++ b/index.html
@@ -52,9 +52,21 @@
     </div>
 
     <!-- Footer -->
-    <footer>
-      <p>© 2026 Gean Paulo &middot; Crafted with care in Manila 🇵🇭</p>
-    </footer>
+    <footer style="display:flex; flex-direction:column; align-items:center; text-align:center;">
+  <img
+    src="assets/images/blackcat.png"
+    alt="Black cat"
+    class="cat-light"
+    style="width:64px; height:auto; margin-bottom:0.75rem;"
+  />
+  <img
+    src="assets/images/orangecat.png"
+    alt="Orange cat"
+    class="cat-dark"
+    style="width:64px; height:auto; margin-bottom:0.75rem;"
+  />
+  <p>© 2026 Gean Paulo &middot; Crafted with care in Manila 🇵🇭</p>
+</footer>
   </div>
 
   <!-- JavaScript -->
