--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     class="cat-dark"
     style="width:64px; height:auto; margin-bottom:0.75rem;"
   />
-  <p>© 2026 Gean Paulo &middot; Purr-fectly crafted in Manila 🐾</p>
+  <p>© 2026 &middot; Purr-fectly crafted in Manila 🐾</p>
 </footer>
   </div>
 
