Update Wise donation link in cat.html

--- a/cat.html
+++ b/cat.html
@@ -158,7 +158,7 @@
       <a href="https://www.paypal.me/geanpaulo" target="_blank" class="donate-paypal">
         <img src="assets/icons/paypal.svg" alt="PayPal Icon"> Donate via PayPal
       </a>
-      <a href="https://wise.com/send-money" target="_blank" class="donate-wise">
+      <a href="https://wise.com/pay/me/geanpaulop" target="_blank" class="donate-wise">
         <img src="assets/icons/wise.svg" alt="Wise Icon"> Donate via Wise
       </a>
     </div>
