--- a/index.html
+++ b/index.html
@@ -53,19 +53,21 @@
 
     <!-- Footer -->
     <footer style="display:flex; flex-direction:column; align-items:center; text-align:center;">
-  <img
-    src="assets/images/blackcat.png"
-    alt="Black cat"
-    class="cat-light"
-    style="width:64px; height:auto; margin-bottom:0.75rem;"
-  />
-  <img
-    src="assets/images/orangecat.png"
-    alt="Orange cat"
-    class="cat-dark"
-    style="width:64px; height:auto; margin-bottom:0.75rem;"
-  />
-  <p>© 2026 &middot; Purr-fectly crafted in Manila 🐾</p>
+  <a href="cat.html">
+    <img
+      src="assets/images/blackcat.png"
+      alt="Black cat"
+      class="cat-light"
+      style="width:64px; height:auto; margin-bottom:0.75rem;"
+    />
+    <img
+      src="assets/images/orangecat.png"
+      alt="Orange cat"
+      class="cat-dark"
+      style="width:64px; height:auto; margin-bottom:0.75rem;"
+    />
+  </a>
+  <p>© 2026 Gean Paulo &middot; Purr-fectly crafted in Manila 🐾</p>
 </footer>
   </div>
 
