--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       style="width:64px; height:auto; margin-bottom:0.75rem;"
     />
   </a>
-  <p>© 2026 Gean Paulo &middot; Purr-fectly crafted in Manila 🐾</p>
+  <p>© 2026 &middot; Purr-fectly crafted in Manila 🐾</p>
 </footer>
   </div>
 
