--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Gean Paulo Links</title>
+
+  <!-- Sitemap -->
+  <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml">
   
   <!-- Basic SEO -->
   <meta name="description" content="Gean Paulo's links page. Connect with me on socials, explore my work, and discover my projects.">
@@ -14,14 +17,14 @@
   <meta property="og:title" content="Gean Paulo Links">
   <meta property="og:description" content="Gean Paulo's links page. Connect with me on socials, explore my work, and discover my projects.">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://geanpaulo.site/">
-  <meta property="og:image" content="https://geanpaulo.site/assets/images/avatar.jpg">
+  <meta property="og:url" content="https://links.geanpaulo.com/">
+  <meta property="og:image" content="https://links.geanpaulo.com/assets/images/avatar.jpg">
   
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Gean Paulo Links">
   <meta name="twitter:description" content="Gean Paulo's links page. Connect with me on socials, explore my work, and discover my projects.">
-  <meta name="twitter:image" content="https://geanpaulo.site/assets/images/avatar.jpg">
+  <meta name="twitter:image" content="https://links.geanpaulo.com/assets/images/avatar.jpg">
   
   <!-- Favicon -->
   <link rel="icon" href="assets/images/gp5.svg" type="image/svg+xml">
@@ -40,7 +43,7 @@
       <div id="greeting" class="greeting-pill">Hello!</div>
       <img src="assets/images/avatar.jpg" alt="Gean Paulo" class="avatar">
       <h1>Gean Paulo</h1>
-      <p>I'm a web developer & designer crafting clean, interactive digital experiences.</p>
+      <p>I'm Gean Paulo, a web developer & designer crafting clean, interactive digital experiences.</p>
     </div>
 
     <!-- Featured Section -->
@@ -52,7 +55,7 @@
     </div>
 
     <!-- Footer -->
-    <footer style="display:flex; flex-direction:column; align-items:center; text-align:center;">
+<footer style="display:flex; flex-direction:column; align-items:center; text-align:center;">
   <a href="cat.html">
     <img
       src="assets/images/blackcat.png"
@@ -67,7 +70,7 @@
       style="width:64px; height:auto; margin-bottom:0.75rem;"
     />
   </a>
-  <p>© 2026 &middot; Purr-fectly crafted in Manila 🐾</p>
+  <p>© 2026 Gean Paulo &middot; Purr-fectly crafted in Manila 🐾</p>
 </footer>
   </div>
 
