--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
   <meta property="og:description" content="Gean Paulo's links page. Connect with me on socials, explore my work, and discover my projects.">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://links.geanpaulo.com/">
-  <meta property="og:image" content="https://links.geanpaulo.com/assets/images/avatar.jpg">
+  <meta property="og:image" content="https://links.geanpaulo.com/assets/images/geanopengraph2.png">
   
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Gean Paulo Links">
   <meta name="twitter:description" content="Gean Paulo's links page. Connect with me on socials, explore my work, and discover my projects.">
-  <meta name="twitter:image" content="https://links.geanpaulo.com/assets/images/avatar.jpg">
+  <meta name="twitter:image" content="https://links.geanpaulo.com/assets/images/geanopengraph2.png">
   
   <!-- Favicon -->
   <link rel="icon" href="assets/images/gp5.svg" type="image/svg+xml">
