--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <div id="greeting" class="greeting-pill">Hello!</div>
       <img src="assets/images/avatar.jpg" alt="Gean Paulo" class="avatar">
       <h1>Gean Paulo</h1>
-      <p>I'm Gean Paulo, a web developer & designer crafting clean, interactive digital experiences.</p>
+      <p>I'm a web developer & designer crafting clean, interactive digital experiences.</p>
     </div>
 
     <!-- Featured Section -->
